# HLSLCompiler

./: CMakeLists.txt  Compiler.cpp  Compiler.h  DXCLoader.cpp  DXCLoader.h  README.md  ShaderBaseTypes.h  SystemUtils.cpp  SystemUtils.h
test/: CMakeLists.txt  main.cpp  triangles.cpp
test/shaders/Triangle/: compileHLSLwithDXC.bat
